# ai_config_accelerator

./: .dockerignore  .env.example  .gitattributes  .gitignore  Makefile  aci-group.yaml  ai_accelerator.code-workspace  azure-deploy.ps1  azure-setup.sh  docker-compose.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: a1b2c3d4e5f6_phase2_config_domain_tables.py  b2c3d4e5f6a7_phase4_draft_lifecycle_columns.py  c3d4e5f6a7b8_phase4_governance_tables.py  d4e5f6a7b8c9_phase5_visibility_flows_field_enhancements.py  e5f6a7b8c9d0_phase6_schema_integrity_improvements.py
backend/app/: enums.py  main.py  settings.py
backend/app/commands/: config_governance_report.py  export_config_db_to_json.py  import_json_to_db.py  pre_cutover_backup.py
backend/app/db/: __init__.py  base.py  deps.py  mixins.py  session.py  transaction.py
backend/app/models/: config_requests.py  wizard.py
backend/app/routers/: __init__.py  candidates.py  config.py  drafts.py  flows.py  generate.py  revisions.py  visibility.py  wizard.py
backend/app/schemas/: schema_language.json  schema_override.json  schema_tool.json  schema_wizard.json
backend/app/services/: actor_registry.py  audit_log.py  auth.py  candidate_service.py  config_db_audit_service.py  config_db_exporter.py  config_db_repository.py  config_db_serialiser.py  config_db_version_service.py  config_db_write_repository.py  config_diff.py  config_editor.py  config_integrity.py  config_layer_lifecycle.py  config_loader.py  config_loader_composable.py  config_patcher.py  config_persistence.py  config_repository.py  (+11 more)
backend/docs/: phase2-import-workflow.md
backend/tests/: conftest.py  db_fixtures.py  test_api_compatibility.py  test_audit_log.py  test_auth.py  test_config_conformance.py  test_config_db_serialiser.py  test_config_diff.py  test_config_editor.py  test_config_loader.py  test_config_patcher.py  test_config_persistence.py  test_config_repository_and_resolution.py  test_config_snapshots.py  test_config_validator.py  test_db_infrastructure.py  test_db_parity.py  test_db_repository.py  test_db_write_integration.py  test_enums.py  test_file_generator.py  test_golden_output.py  test_import_services.py  test_path_sanitization.py  test_phase2_feature_flag.py  test_phase2_models.py  test_phase4_lifecycle.py  test_routes.py  test_save_time_validation.py  test_snapshots.py  test_version_history.py  test_visibility_engine.py  test_wizard_flow_service.py
(+161 files in other folders)
